--- a/.github/workflows/aseprite_build_deploy.yml
+++ b/.github/workflows/aseprite_build_deploy.yml
@@ -38,10 +38,13 @@ jobs:
         with:
           path: ${{ steps.version_info.outputs.latest_tag }}.txt
           key: cached_version
-
+      - name: Should we start new build?
+        id: should_build
+        if: steps.version_check.outputs.cache-hit != 'true'
+        run: echo "::set-output name=should_build::true"
       - name: Create Release
         id: create_release
-        if: steps.should_build.outputs.should_build
+        if: "true"
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
