--- a/.github/workflows/aseprite_build_deploy.yml
+++ b/.github/workflows/aseprite_build_deploy.yml
@@ -104,7 +104,7 @@ jobs:
           dir
           cd "Microsoft Visual Studio"
           dir
-          cd 2019
+          cd Shared
           dir
           cd Enterprise
           cd Common7
