--- a/.github/workflows/aseprite_build_deploy.yml
+++ b/.github/workflows/aseprite_build_deploy.yml
@@ -95,25 +95,12 @@ jobs:
           mkdir -p aseprite/build
       - name: Add msbuild to PATH
         uses: microsoft/setup-msbuild@v2
-      # - name: check mvs install location
-      #   run: |
-      #     C:
-      #     cd ../../../../../../../../
-      #     dir
-      #     cd "Program Files (x86)"
-      #     dir
-      #     cd "Microsoft Visual Studio"
-      #     dir
-      #     cd Shared
-      #     dir
-      #     cd Enterprise
-      #     cd Common7
-      #     cd Tools
-      #     dir
+        with:
+          vs-version: "[16.4,16.5)"
       - name: (Windows) Set architecture for the produced binary
         if: matrix.os == 'windows-latest'
         shell: cmd
-        run: call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.bat" -arch=x64
+        run: call "C:\Program Files\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.bat" -arch=x64
       - name: (Windows) Setting Visual Studio build environment variables and paths
         if: matrix.os == 'windows-latest'
         uses: seanmiddleditch/gha-setup-vsdevenv@v1
