--- a/.github/workflows/aseprite_build_deploy.yml
+++ b/.github/workflows/aseprite_build_deploy.yml
@@ -94,7 +94,8 @@ jobs:
         run: |
           curl -o depot_tools.zip -L https://storage.googleapis.com/chrome-infra/depot_tools.zip
           unzip depot_tools.zip -d depot_tools
-          set PATH=%PATH%;depot_tools
+          cd
+          set PATH=%PATH%;D:\depot_tools
           cd depot_tools
           gclient sync
           cd ../
